Updating for workshop

--- a/public/index.html
+++ b/public/index.html
@@ -35,9 +35,9 @@
     <!-- HEADER AND POOL COUNT -->
     <div class="jumbotron text-center">
 
-      <h1>Fill Up A Pool</h1>
+      <h1>Reserve Your Spacecraft</h1>
       </br>
-      <h3>Your Pool URL!</h3> <h5></h5>
+      <h3>Your Spacecraft Location:</h3> <h5></h5>
 
       <div ng-repeat="pool in pools">
         <a href=\"{{pool.token}}\">{{pool.token}}</a>
@@ -70,7 +70,7 @@
     </div>
     </br>
     <div class="text-center text-muted">
-      <p>A demo by <a href="http://codemartians.com">Code Martians</a>.</p>
+      <p>A demo by <a href="http://go2group.com">Go2Group</a>.</p>
 
 
   </div>
